Changelog
=========

3.1-dev0 - (unreleased)
---------------------------
* display real organisation membership instead of the 'o' property in
  role listing of members [dumitval]

3.0 - (2021-04-15)
---------------------------
* restrict available organisations to own country when NFP edits users
  [valipod]

2.9 - (2021-04-12)
---------------------------
* restrict adding members to NRC and AWP roles to users from
  organisations from the NFP's country [dumitval]

2.8 - (2021-04-09)
---------------------------
* fix creation of eu/int organisations (and add un) [dumitval]
* re-enable user editing by NFP if the user belongs to the NFP country
  [dumitval]
* list all organisations for NFP, edit only on country orgs [dumitval]

2.7 - (2021-02-15)
---------------------------
* remove dependency on validate_email [dumitval]
* improve/fix extranet_reporters listing - allow any nubmer of bits
  between the top role dn and the country code [dumitval]
* fix role export where users have some incorrect data [dumitval]
* remove unused notify_on_membership_op method [dumitval]

2.6 - (2021-01-09)
---------------------------
* adapt logged_in_user for testing [dumitval]

2.5 - (2021-01-08)
---------------------------
* remove edit user permission for nfps [dumitval]
* move _is_authenticated, logged_in_user  to logic_common [dumitval]
* move _get_ldap_agent to ldap_config [dumitval]
* move nfp_for_country, orgs_in_country to ui_common [dumitval]
* _get_ldap_agent default bind=True [dumitval]
* removed unused code for auto-disabling users [dumitval]

2.4 - (2020-12-04)
---------------------------
* merge all nfp/nrc related functionality from the python2 branch
  [valipod refs #109366]
* remove all python2/zope2 specific functionality/support
  [valipod refs #109366]
* add organisation id in the table listing to allow filtering
  [dumitval refs #125322]
* Add organisation title to the XLS exported fields in role member
  export [dumitval refs #125322]